infrastructure/gitops/infrastructure/registry/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/name: registry
spec:
  ingressClassName: traefik
  rules:
    - host: registry.almckay.io
      http:
        paths:
          - backend:
              service:
                name: registry
                port:
                  number: 5000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - registry.almckay.io
      secretName: registry-tls
